--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "predeploy": "npm run build && copy CNAME dist\\",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
   },
